--- a/RunFlexFE/public/css/style.css
+++ b/RunFlexFE/public/css/style.css
@@ -11,6 +11,23 @@
     font-weight: 700;
 }
 
+.status-in-stock {
+    color: green;
+}
+
+.status-out-of-stock {
+    color: red;
+}
+
+button[disabled] {
+    background-color: lightgray;
+    /* Màu nền xám */
+    cursor: not-allowed;
+    /* Con trỏ không cho phép */
+    opacity: 0.5;
+    /* Giảm độ sáng */
+}
+
 
 /* custom form nhận đăng khuyến mãi */
 
@@ -3766,7 +3783,270 @@ div.item:hover {
     }
 }
 
+
+/* Nút chọn màu sắc */
+
+.color-btn {
+    display: inline-block;
+    padding: 8px 16px;
+    margin-right: 10px;
+    background-color: #f1f1f1;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.color-btn.active {
+    background-color: #007bff;
+    color: #fff;
+    border-color: #007bff;
+}
+
+
+/* Nút chọn kích cỡ */
+
+.size-btn {
+    display: inline-block;
+    padding: 8px 16px;
+    margin-right: 10px;
+    background-color: #f1f1f1;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.size-btn.active {
+    background-color: #007bff;
+    color: #fff;
+    border-color: #007bff;
+}
+
+
+/* Nút chọn chất liệu */
+
+.material-btn {
+    display: inline-block;
+    padding: 8px 16px;
+    margin-right: 10px;
+    background-color: #f1f1f1;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.material-btn.active {
+    background-color: #007bff;
+    color: #fff;
+    border-color: #007bff;
+}
+
 .colorlib-product {
     padding: 7em 0;
     clear: both;
+}
+
+.container-cart {
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.product-cart,
+.product-name {
+    width: 100%;
+    display: block;
+    float: left;
+    border-bottom: 1px solid #e6e6e6;
+    padding-bottom: 1em;
+    margin-bottom: 1em;
+}
+
+.product-cart .one-forth,
+.product-name .one-forth {
+    width: calc(100% - 520px);
+    height: 100px !important;
+    display: table;
+    float: left;
+}
+
+@media (max-width: 767.98px) {
+    .product-cart .one-forth,
+    .product-name .one-forth {
+        width: calc(100% - 240px);
+    }
+}
+
+.product-cart .one-eight,
+.product-name .one-eight {
+    width: 130px;
+    height: 100px !important;
+    display: table;
+    float: left;
+}
+
+@media (max-width: 767.98px) {
+    .product-cart .one-eight,
+    .product-name .one-eight {
+        width: 60px;
+    }
+}
+
+.product-cart .display-tc,
+.product-name .display-tc {
+    display: table-cell;
+    vertical-align: middle;
+    height: 100px;
+    width: 100%;
+}
+
+.product-cart .display-tc h3,
+.product-name .display-tc h3 {
+    margin-bottom: 0;
+    padding-left: 30px;
+    font-size: 14px;
+}
+
+.product-cart .display-tc .closed,
+.product-name .display-tc .closed {
+    display: block;
+    margin: 0 auto;
+    width: 20px;
+    height: 20px;
+    background: #f2f2f2;
+    position: relative;
+}
+
+.product-cart .display-tc .closed:before,
+.product-cart .display-tc .closed:after,
+.product-name .display-tc .closed:before,
+.product-name .display-tc .closed:after {
+    position: absolute;
+    top: 10px;
+    bottom: 0;
+    left: 5px;
+    right: 0;
+    content: '';
+    width: 10px;
+    height: 1px;
+    background: #999999;
+    -webkit-transform: rotateZ(45deg);
+    -moz-transform: rotateZ(45deg);
+    -ms-transform: rotateZ(45deg);
+    -o-transform: rotateZ(45deg);
+    transform: rotateZ(45deg);
+}
+
+.product-cart .display-tc .closed:after,
+.product-name .display-tc .closed:after {
+    -webkit-transform: rotateZ(-45deg);
+    -moz-transform: rotateZ(-45deg);
+    -ms-transform: rotateZ(-45deg);
+    -o-transform: rotateZ(-45deg);
+    transform: rotateZ(-45deg);
+}
+
+.product-cart .product-img,
+.product-name .product-img {
+    display: block;
+    width: 90px;
+    height: 100px;
+    float: left;
+}
+
+@media (max-width: 767.98px) {
+    .product-cart .product-img,
+    .product-name .product-img {
+        display: none;
+    }
+}
+
+.product-cart .form-control,
+.product-name .form-control {
+    padding: 0;
+    height: 40px;
+    width: 50%;
+    margin: 0 auto;
+    border: 1px solid #f0f0f0 !important;
+}
+
+.product-name {
+    padding: .8em 0;
+    background: #f0f0f0;
+    border: none;
+    width: 100%;
+    -webkit-border-radius: 30px;
+    -moz-border-radius: 30px;
+    -ms-border-radius: 30px;
+    border-radius: 30px;
+}
+
+.product-name .one-forth,
+.product-name .one-eight {
+    height: initial !important;
+}
+
+.product-name .one-forth span,
+.product-name .one-eight span {
+    color: #000;
+    font-weight: 400;
+    text-transform: uppercase;
+}
+
+@media (max-width: 767.98px) {
+    .product-name .one-forth span,
+    .product-name .one-eight span {
+        font-size: 10px;
+    }
+}
+
+.total-wrap .form-control {
+    height: 40px;
+    border: 1px solid #f0f0f0 !important;
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+@media (max-width: 767.98px) {
+    .total-wrap .btn {
+        width: 100%;
+    }
+}
+
+.total-wrap .total {
+    padding: 1em;
+    background: whitesmoke;
+    width: 100%;
+}
+
+.total-wrap .total .sub {
+    border-bottom: 1px solid #616161;
+    margin-bottom: 10px;
+}
+
+.total-wrap .total p {
+    width: 100%;
+    display: block;
+    margin-bottom: 10px;
+}
+
+.total-wrap .total p span {
+    width: 48%;
+    display: inline-block;
+}
+
+.total-wrap .total p span:last-child {
+    font-weight: 500;
+}
+
+.total-wrap .total .grand-total p span:last-child {
+    color: #616161;
+    font-weight: 500;
+}
+
+.product-cart .one-eight.text-center input[type="checkbox"] {
+    margin-top: 10px;
+    transform: scale(1.2);
+    /* Tăng kích thước checkbox */
 }
