--- a/RunFlexFE/public/layout/header.html
+++ b/RunFlexFE/public/layout/header.html
@@ -175,7 +175,7 @@
                 <i class="fas fa-search" style="color: black"></i>
             </a>
 
-            <a style="color: #272727" href="#" uk-toggle="target: #offcanvas-flip2">
+            <a style="color: #272727" href="/cart">
                 <i class="fas fa-shopping-cart"></i>
             </a>
             <button class="navbar-toggler" type="button" uk-toggle="target: #offcanvas-flip1" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
