--- a/RunFlexFE/public/views/signup.html
+++ b/RunFlexFE/public/views/signup.html
@@ -7,42 +7,26 @@
                     <h1>Tạo tài khoản</h1>
                 </div>
             </div>
-            <div class="signin-right ">
-                <form action="">
-                    <div class="firstname form-control1 ">
-                        <input type="text" id="firstname" placeholder="Họ">
-                    </div>
-                    <div class="lastname form-control1">
-                        <input type="text" id="lastname" placeholder="Tên">
-                    </div>
-                    <div class="sex form-control1">
-                        <div class="female">
-
-                            <input type="radio" id="female" checked name="sex">
-                            <label for="female">Nữ</label>
-                        </div>
-                        <div class="male">
-
-                            <input type="radio" id="male" name="sex">
-                            <label for="male">Nam</label>
-                        </div>
-                    </div>
-                    <div class="birthday form-control1">
-                        <input type="text" id="birthday" placeholder="mm/dd/yyyy">
+            <div class="signin-right">
+                <form ng-submit="signup()">
+                    <div class="fullName form-control1 ">
+                        <input type="text" ng-model="form.fullName" placeholder="FullName">
                     </div>
                     <div class="email form-control1">
-                        <input type="email" id="email" placeholder="Email">
+                        <input type="email" ng-model="form.email" placeholder="Email">
+                    </div>
+                    <div class="username form-control1">
+                        <input type="text" ng-model="form.userName" placeholder="UserName">
                     </div>
                     <div class="password form-control1">
-                        <input type="password" id="password" placeholder="Password">
+                        <input type="password" ng-model="form.password" placeholder="Password">
                     </div>
                     <div class="recaptcha form-control1">This site is protected by reCAPTCHA and the Google <a href="">Privacy Policy</a> and <a href="">Terms of Service</a> apply.</div>
-                    <div class="submit">
-                        <p>Đăng kí</p>
-
+                    <div>
+                        <input style="color: rgb(255, 255, 255);background-color: black;" class="btn" type="submit" value="Đăng kí">
                     </div>
                     <div class="backto">
-                        <a href=""><i class="fa fa-long-arrow-alt-left"></i> Quay lại trang chủ</a>
+                        <a href="/signin"><i class="fa fa-long-arrow-alt-left"></i> Quay lại Đăng nhập</a>
                     </div>
                 </form>
             </div>
