--- a/RunFlexFE/public/views/cart.html
+++ b/RunFlexFE/public/views/cart.html
@@ -2,8 +2,11 @@
     <div class="container-cart">
 
         <div class="row row-pb-lg">
-            <div class="col-md-8">
+            <div class="col-md-12">
                 <div class="product-name d-flex">
+                    <div class="one-eight text-center">
+                        <span>Chọn</span>
+                    </div>
                     <div class="one-forth text-left px-4">
                         <span>Sản phẩm</span>
                     </div>
@@ -88,7 +91,7 @@
                     <div class="row">
                         <div class="col-sm-8">
                         </div>
-                        <div class="col-sm-4 text-center" style="top: -185px;">
+                        <div class="col-sm-4 text-center">
                             <form action="#">
                                 <div class="row form-group">
                                     <div class="col-sm-9">
